--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -361,6 +361,12 @@
     "!python deep-text-recognition-benchmark/train.py \\\n",
     "    --train_data \"dataset/real_receipt/train\" \\\n",
     "    --valid_data \"dataset/real_receipt/valid\" \\\n",
+    "    --num_iter 20000 \\\n",
+    "    --valInterval 500 \\\n",
+    "    --saved_model \"pre_trained_models/chinese.pth\" \\\n",
+    "    --FT \\\n",
+    "    --adam \\\n",
+    "    --lr 5e-5 \\\n",
     "    --select_data / \\\n",
     "    --batch_ratio 1 \\\n",
     "    --Transformation \"TPS\" \\\n",
@@ -369,14 +375,7 @@
     "    --Prediction \"CTC\" \\\n",
     "    --input_channel 1 \\\n",
     "    --output_channel 512 \\\n",
-    "    --hidden_size 512 \\\n",
-    "    --saved_model \"pre_trained_models/chinese.pth\" \\\n",
-    "    --FT \\\n",
-    "    --workers 0 \\\n",
-    "    --adam \\\n",
-    "    --lr 5e-5 \\\n",
-    "    --num_iter 20000\n",
-    "    --valInterval 500"
+    "    --hidden_size 512    "
    ]
   },
   {
@@ -411,19 +410,25 @@
     "!python deep-text-recognition-benchmark/train.py \\\n",
     "    --train_data \"dataset/real_receipt/train\" \\\n",
     "    --valid_data \"dataset/real_receipt/valid\" \\\n",
+    "    --num_iter 20000 \\\n",
+    "    --valInterval 500 \\\n",
+    "    --adam \\\n",
+    "    --lr 1e-3 \\\n",
     "    --select_data / \\\n",
     "    --batch_ratio 1 \\\n",
     "    --Transformation \"TPS\" \\\n",
     "    --FeatureExtraction \"RCNN\" \\\n",
     "    --SequenceModeling \"BiLSTM\" \\\n",
     "    --Prediction \"CTC\" \\\n",
-    "    --valInterval 500"
+    "    --input_channel 1 \\\n",
+    "    --output_channel 512 \\\n",
+    "    --hidden_size 512    "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
